--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        
+        <link rel="stylesheet" href="./css/sweetalert.css">
         
     </head>
     <body>
@@ -33,7 +33,8 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://assets.pagar.me/pagarme-js/3.0/pagarme.min.js"></script>
+        <script src="./scripts/sweetalert.min.js"></script>
+        <script src="./scripts/pagarme.min.js"></script>
         <script src="./scripts/index.js"/></script>
     </body>
 </html>
