--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Gerador de Card Hash - Pagarme</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Gerador de Card Hash no PagarMe">
+        <meta name="keywords" content="Pagarme,card,hash,gerador">
+        <meta name="author" content="Leandro Marques do Nascimento">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/sweetalert.css">
         
